Expanded customer management capabilities