@@ -3,9 +3,14 @@ package dev.getelements.elements.stripe.event;
 import dev.getelements.elements.sdk.Event;
 import dev.getelements.elements.stripe.StripeEvents;
 
+import java.util.Arrays;
 import java.util.List;
 
-public record StripePaymentSucceededEvent(String paymentIntentId, long amount, String currency) implements Event {
+public record StripePaymentSucceededEvent(
+        String paymentIntentId,
+        long amount,
+        String currency,
+        String customerId) implements Event {
 
     @Override
     public String getEventName() {
@@ -14,7 +19,7 @@ public record StripePaymentSucceededEvent(String paymentIntentId, long amount, S
 
     @Override
     public List<Object> getEventArguments() {
-        return List.of(paymentIntentId, amount, currency);
+        return Arrays.asList(paymentIntentId, amount, currency, customerId);
     }
 
 }
